new name and gmail

--- a/apna.html
+++ b/apna.html
@@ -1,4 +1,12 @@
 <p>
     this is a new repo
 </p>
-nike name = raju bhai
+<p>
+    nike name = raju bhai
+</p>
+
+<p>
+    <p>
+    ....@gmail.com
+</p>
+</p>
